--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -5,8 +5,9 @@
     border-radius: 10px;
     width: 282px;
     margin: 0 auto;
-    height: 361px;
+    /* height: 361px; */
     position: relative;
+    padding-bottom: 31px;
   }
   
   
