--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,5 +10,6 @@
     justify-content: center;
     align-items: center;
     opacity: 0;
+    transition: visibility 0.3s, opacity 0.3s ease-out;
   }
   
