--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,6 +1,7 @@
 .form__input {
-    margin: 0 0 30px;
+   
     padding: 0 0 13px;
+    margin: 0;
     font-size: 14px;
     line-height: 17px;
     max-width: 358px;
@@ -15,7 +16,7 @@
   }
   
   .form__input:last-of-type {
-    margin: 0;
+    margin-top: 30px;
   }
   
  
